<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/jd_market"
        android:layout_width="234dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="88dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/jd_market"
        android:textAppearance="@style/jd_market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tus_compras"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/tus_compras"
        android:textAppearance="@style/tus_compras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jd_market" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="303dp"
        android:layout_height="281dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tus_compras"
        app:srcCompat="@drawable/shop"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="208dp"
        android:layout_height="66dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/bordes_redondos"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        android:textColor="#0E0B0E"
        android:textColorHighlight="#CDDC39"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="245dp"
        android:layout_height="54dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/bordes_redondos"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        android:textSize="30sp"
        app:backgroundTint="#A62B2D35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>