<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerRegistrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/para_empeza"
        android:layout_width="357dp"
        android:layout_height="73dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/para_empeza"
        android:textAppearance="@style/para_empeza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reg_strese_"
        android:layout_width="344dp"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="104dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/registrese"
        android:textAppearance="@style/reg_strese_"
        android:textSize="20sp"
        android:translationY="-0.97sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/para_empeza" />


    <EditText
        android:id="@+id/email"
        android:layout_width="309dp"
        android:layout_height="49dp"
        android:layout_marginTop="284dp"
        android:hint="Correo Electrónico"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:hint="Contraseña"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/registrarse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="92dp"
        android:text="Registrar"
        android:textColor="#FDF1F1"
        app:backgroundTint="#0008C7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.47" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageViewFacebook"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_strese_"
        app:srcCompat="@drawable/iconsfacebook" />

    <ImageView
        android:id="@+id/imageViewGoogle"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/iconsgoogle" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:text="Acepta los términos y condiciones de nuestros servicios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/para_empeza"
        app:srcCompat="@drawable/iconsemail" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/iconscandado" />

</androidx.constraintlayout.widget.ConstraintLayout>