<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/para_empeza1"
        android:layout_width="357dp"
        android:layout_height="73dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="Bienvenido"
        android:textAppearance="@style/para_empeza"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reg_strese_1"
        android:layout_width="333dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="104dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/iniciosesion"
        android:textAppearance="@style/reg_strese_"
        android:textSize="16sp"
        android:translationY="-0.97sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/para_empeza1" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="309dp"
        android:layout_height="49dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="16dp"
        android:hint="Email o Nombre de Usuario"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/password1"
        android:layout_width="298dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email1" />

    <Button
        android:id="@+id/login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="64dp"
        android:text="Iniciar Sesión"
        android:textColor="#FDF1F1"
        app:backgroundTint="#0008C7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox1"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/loading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password1"
        app:layout_constraintStart_toStartOf="@+id/password1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reg_strese_1"
        app:srcCompat="@drawable/iconstwitter"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toTopOf="@+id/email1"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/reg_strese_1"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/iconsfacebook" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reg_strese_1"
        app:srcCompat="@drawable/iconsgoogle" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/email1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/para_empeza1"
        app:srcCompat="@drawable/iconsemail" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toStartOf="@+id/password1"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/iconscandado" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:text="Guardar Inicio de Sesión"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1" />


</androidx.constraintlayout.widget.ConstraintLayout>